--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -24,11 +24,14 @@
             margin-left:5px
         }
         .navbar a { 
+            
             color:rgb(255, 255, 255);
             text-decoration: none;
             font-size: 15px;
             border:2px solid  rgb(255, 255, 255);
-            border-radius:10px;
+            border-radius:20px;
+            box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.544);
+
             margin:5px 0px 0px 10px;
             padding:5px 10px;
             align-content:center;
@@ -59,7 +62,8 @@
 
     .navbar a { 
         font-size: 18px;
-       
+        border-radius:20px;
+        box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.544);
         min-width:10px;
         max-width:10px;
     }
@@ -85,6 +89,7 @@
 
 @media only screen and (min-width: 768px) {
     .navbar{
+
         width:100%;
         background:linear-gradient(30deg ,#000000,#3c3c3c);
         padding: 5px 10px ;
@@ -111,7 +116,9 @@
         text-decoration: none;
         font-size: 20px;
         border:2px solid  rgb(255, 255, 255);
-        border-radius:10px;
+        border-radius:20px;
+        box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.544);
+
         margin:5px;
         padding:5px 30px;
         align-content:center;
