--- a/src/components/FilterBar.module.css
+++ b/src/components/FilterBar.module.css
@@ -14,7 +14,7 @@
         width:315px;
         box-shadow: 3px 10px 5px rgba(0, 0, 0, 0.3);
         transition:0.5s;
-        position:fixed;
+        position:absolute;
         transform: translate(-50%,50%);
         left:50%;
         bottom:10%
